<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Galaxy S II Settings</string>

    <string name="screen_colors_title">Colors</string>
    <string name="category_mdnie_title">Screen</string>
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe Scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe Mode</string>
    <string name="mdnie_negative_title_head">Negative Mode</string>
    <string name="mdnie_negative_summary_head">Enable/Disable inverted colors</string>
    <string name="mdnie_outdoor_title_head">Outdoor Mode</string>
    <string name="mdnie_outdoor_summary_head">Enable/Disable outdoor mode</string>
    <string name="panel_gamma_title_head">Screen Gamma</string>
    <string name="panel_gamma_summary_head">Set screen gamma value</string>

    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>
    
    <string name="category_sensors_title">Sensors</string>
    <string name="gyro_subcat_title">Gyroscope</string>
    <string name="use_gyro_calibration_title_head">Use calibration data</string>
    <string name="use_gyro_calibration_summary_head">Use the gyroscope calibration values. Do a calibration after checking this!</string>
    <string name="calibrate_gyro_title_head">Calibrate</string>
    <string name="calibrate_gyro_summary_head">Put your phone on a flat surface, and press this to calibrate</string>
    <string name="calibrate_gyro_done_title_head">Calibration done</string>
    <string name="calibrate_gyro_done_msg_head">The gyroscope has been successfully calibrated!</string>
    <string name="touchkey_subcat_title">Touch key</string>
    <string name="touchkey_light_title_head">Enable keys backlight</string>
    <string name="touchkey_light_summary_head">Light up touch keys when screen is on</string> 
    <string name="touchkey_timeout_title_head">Backlight timeout</string>
    <string name="touchkey_timeout_summary_head">Delay after a keypress before backlight turns off</string>

    <string name="category_haptic_title">Haptic</string>
    <string name="vibrator_subcat_title">Vibrator</string>
    <string name="vibrator_intensity_title_head">Vibrator Intensity</string>
    <string name="vibrator_intensity_summary_head">Set vibrator intensity</string>

    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>
</resources>
